# novodb

./: .gitignore  CMakeLists.txt  README.md
Novodb.xcodeproj/: project.pbxproj
docs/: README.md  javascript_framework_survey.md
frontend/: Gruntfile.js  bower.json  index-ext.html  index.html  package.json
frontend/css/: jquery.terminal.css  novodb.css  simple.css  ventus.css
frontend/goldenlayout/js/: goldenlayout.js
frontend/js/: jquery.terminal-0.8.8.js  novodb-jq.js  novodb-lib.js  novodb.js  plugin_support.js  util-lib.js  ventus.js
frontend/partials/: autocomplete.html
frontend/plugins/: common.js
frontend/plugins/Breakpoint/: Breakpoint.js  breakpoint.html  definition.json  plugin.html
frontend/plugins/Controller/: Controller.js  definition.json  plugin.html
frontend/plugins/Insview/: Insview.js  definition.json  instview.css  insview.html  insview.js  plugin.html
frontend/plugins/Lldbcmd/: definition.json  lldb_cmd.css  lldb_cmd.html  lldb_cmd.js
frontend/plugins/Loader/: definition.json  loader.css  loader.html  loader.js  plugin.html
frontend/plugins/Memsearch/: definition.json  memsearch.css  memsearch.html  memsearch.js  plugin.html
frontend/plugins/Memview/: memview.html
frontend/plugins/Regview/: Regview.js  definition.json  plugin.html  regview.html
frontend/plugins/Symbolics/: Symbolics.js  definition.json  symbolics.css  symbolics.html  symbolics.js_
frontend/plugins/Watchcmd/: definition.json  watch_cmd.css  watch_cmd.html  watch_cmd.js
frontend/plugins/memview/: Memview.js  definition.json  main.js  memview.css  plugin.html
libs/: .gitignore  LLDB.framework  cef_current  civetweb_include  gtest.framework  lldb_include  netlib_include  prepare_Darwin  prepare_Linux  yara_include
libs/LLDB.framework/Versions/A/: Headers
libs/LLDB.framework/Versions/A/Resources/: darwin-debug
libs/LLDB.framework/Versions/A/_CodeSignature/: CodeResources
libs/LLDB.framework/XPCServices/com.apple.lldb.launcherRootXPCService.xpc/Contents/: Info.plist
libs/LLDB.framework/XPCServices/com.apple.lldb.launcherXPCService.xpc/Contents/: Info.plist  version.plist
libs/cef_binary_3.2217.1940_macosx64/: CMakeLists.txt  README.txt
libs/cef_binary_3.2217.1940_macosx64/Debug/Chromium Embedded Framework.framework/Resources/: cef.pak  (+4 more)
libs/cef_binary_3.2217.1940_macosx64/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
libs/civetweb/examples/embedded_cpp/: .embedded_cpp.cpp.swp  embedded_cpp
libs/cpp-netlib-0.11.0-final/example/: fileserver  hello_world_async_server_with_work_queue  hello_world_server
libs/cpp-netlib-0.11.0-final/tests/: cpp-netlib-http-client_constructor_test  cpp-netlib-http-request_incremental_parser_test  cpp-netlib-http-server_async_run_stop_concurrency  cpp-netlib-http-server_constructor_test  cpp-netlib-http-server_header_parser_test  cpp-netlib-message_test  cpp-netlib-message_transform_test  cpp-netlib-uri_encoding_test  cpp-netlib-utils_thread_pool
libs/dynamic_mac/: libyara.3.dylib
libs/gtest.framework/Versions/A/: gtest
libs/src/: .gitignore
libs/src/civetweb/: civetweb
libs/src/yara/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  libtool
libs/src/yara/.deps/: args.Po  threading.Po  yara.Po  yarac.Po
libs/src/yara/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
libs/src/yara/libyara/: Makefile  Makefile.in
libs/yara/: libyara-symbols.expsym
novodbgui_src/Independent/: dbg_handler.cpp  dbg_handler.h  simple_app.cpp  simple_app.h
novodbgui_src/Mac/: main.mm
novodbgui_src/Mac/Resources/en.lproj/: MainMenu.xib
novodbgui_src/unit_tests/: action_tests.cpp  test_units.cpp
novodblib_src/: CMakeLists.txt
novodblib_src/Independent/: request_router.cpp  request_router.h
novodblib_src/Independent/modules/: lldb_module.cpp  lldb_module_commands1.cpp  lldb_module_memops.cpp  util_module.cpp
novodblib_src/Linux/: platform_support.cpp
novodblib_src/Mac/Resources/: Novodb-Info.plist
novodblib_src/unit_tests/: validation_tests.cpp
novodbweb_src/: CMakeLists.txt
novodbweb_src/Independent/: main_web.cpp  main_web.h
novodbweb_src/Mac/: main.cpp
novolib_src/Independent/: Module.h  request_router.cpp  request_router.h
novolib_src/Independent/modules/: enum_to_string.h  json_serialize.h  lldb_module_commands.h  lldb_module_commands1.cpp
novolib_src/Mac/: simple_handler_mac.mm
novolib_src/Mac/Resources/: Novodb Helper-Info.plist
src/Independent/: Module.cpp  Module.h  dbg_handler.cpp  dbg_handler.h  enum_to_string.cpp  enum_to_string.h  json_serialize.cpp  json_serialize.h  llvm_scheme_handler.cpp  llvm_scheme_handler.h  platform_support.h  request_router.cpp  request_router.h  simple_app.cpp  simple_handler.cpp  util_scheme_handler.cpp  util_scheme_handler.h
src/Independent/modules/: json_serialize.cpp  lldb_module.cpp  lldb_module_commands.h  lldb_module_commands1.cpp  lldb_module_memops.cpp  util_module.cpp
src/Mac/: novodb-help.cpp  platform_support.cpp  simple_handler_mac.mm
src/html/: index.html
src/html/js/: app.js
src/unit_tests/: test_units.cpp  validation_tests.cpp
tools/: make_more_helpers.sh
(+96 files in other folders)
